--- a/recovery/recovery.rc
+++ b/recovery/recovery.rc
@@ -1,5 +1,3 @@
-import init.usb.rc
-
 on early-init
     start ueventd
 
@@ -8,13 +6,15 @@ on init
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
-    export INTERNAL_STORAGE /sdcard2
+    export INTERNAL_STORAGE /emmc
 
     symlink /system/etc /etc
 
     mkdir /boot
+    mkdir /recovery
     mkdir /sdcard
-    mkdir /sdcard2
+    mkdir /internal_sd
+    mkdir /external_sd
     mkdir /sd-ext
     mkdir /datadata
     mkdir /emmc
@@ -22,9 +22,17 @@ on init
     mkdir /data
     mkdir /cache
     mount /tmp /tmp tmpfs
-    insmod /sbup.ko
-    mknod /dev/sec c 182 0
-    chmod 0660 /dev/sec
+    
+    chown root shell /tmp
+    chmod 0775 /tmp
+    
+	write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/idVendor 0bb4
+    write /sys/class/android_usb/android0/idProduct 0c03
+	write /sys/class/android_usb/android0/functions mass_storage,adb
+    write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
+    write /sys/class/android_usb/android0/iProduct ${ro.product.model}
+    write /sys/class/android_usb/android0/iSerial ${ro.serialno}
 
 on boot
 
@@ -42,26 +50,20 @@ service recovery /sbin/recovery
 service adbd /sbin/adbd recovery
     disabled
 
-# adbd is controlled via property triggers in init.<platform>.usb.rc
-service adbd /sbin/adbd
-    class core
-    disabled
-
-# Always start adbd on userdebug and eng builds
-on property:ro.debuggable=1
-    write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/iSerial CWM-ZTE-V967S
-    write /sys/class/android_usb/android0/iManufacturer ZTE
-    write /sys/class/android_usb/android0/iProduct P188F07
-    write /sys/class/android_usb/android0/idVendor 0BB4
-    write /sys/class/android_usb/android0/idProduct 0c01
-#   write /sys/class/android_usb/android0/functions adb
-    write /sys/class/android_usb/android0/functions mass_storage,adb
-    write /sys/class/android_usb/android0/enable 1
-    start adbd
+# Recovery will start adb once it has checked the keys
 
 # Restart adbd so it can run as root
 on property:service.adb.root=1
     write /sys/class/android_usb/android0/enable 0
     restart adbd
     write /sys/class/android_usb/android0/enable 1
+
+on property:sys.storage.ums_enabled=1
+    write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/functions adb,mass_storage
+    write /sys/class/android_usb/android0/enable 1
+
+on property:sys.storage.ums_enabled=0
+    write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/functions adb
+    write /sys/class/android_usb/android0/enable ${service.adb.root}
