--- a/recovery/init.rc
+++ b/recovery/init.rc
@@ -6,7 +6,6 @@ on init
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
-    export INTERNAL_STORAGE /emmc
 
     symlink /system/etc /etc
 
@@ -49,9 +48,15 @@ service recovery /sbin/recovery
 
 service adbd /sbin/adbd recovery
     disabled
+    socket adbd stream 660 system system
 
 # Recovery will start adb once it has checked the keys
 
+on property:ro.debuggable=1
+    #write /sys/class/android_usb/android0/enable 1
+    #start adbd
+    setprop service.adb.root 1
+    
 # Restart adbd so it can run as root
 on property:service.adb.root=1
     write /sys/class/android_usb/android0/enable 0
